# twitter-export

./: .gitignore  Makefile  Procfile  README.md  app.json  campaign.db  db_setup.sh  mac_setup.sh  pyproject.toml  state.db
scripts/: db_init.py
static/: index.html
tests/: test_tw_sub.py
tw_sub/: __init__.py  analysis.py  back_main.py  campaign.py  campdb.py  config.py  daemon.py  db.py  dbutils.py  errors.py  followers.py  main.py  models.py  mytweepy.py  recreate_db.py  utils.py  worker.py
tw_sub/datasets/: occupations.json
tw_sub/static/: dummy.txt
tw_sub/static/css/: app.css  paper-kit.css
tw_sub/static/js/: tagify.js
tw_sub/templates/: auth.html  base.html  emails.html  followers.html  link.html  main.html  submit.html  updates.html
