[tool.poetry]
name = "tw-sub"
version = "0.1.0"
description = ""
authors = ["Mohit Jandwani <mohitjandwani@gmail.com>"]

[tool.poetry.scripts]
server = "tw_sub:start_app"
worker = "tw_sub:start_worker"
recreate_db = "tw_sub:recreate_db"

[tool.poetry.dependencies]
python = "3.8.3"
uvicorn = "^0.11.5"
tweepy = "^3.8.0"
flask = "^1.1.2"
waitress = "^1.4.4"
sqlite3worker = "^1.1.7"
requests = "^2.24.0"
sqlalchemy = "^1.3.18"
psycopg2 = "^2.8.5"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
