[tool.poetry]
name = "tw-sub"
version = "0.3.0"
description = "This is an app to DM or export your twitter followers"
authors = ["Mohit Jandwani <mohitjandwani@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.3"
tweepy = "^3.8.0"
flask = "^1.1.2"
requests = "^2.24.0"
sqlalchemy = "^1.3.18"
psycopg2 = "^2.8.5"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
